--- a/presentation/index.html
+++ b/presentation/index.html
@@ -29,21 +29,21 @@
     <div class="slides">
       <section>
         <section>
-          <h1>Messing around with React</h1>
-          <p>Presentation about react reconciler</p>
+          <h1>Time well wasted</h1>
+          <p>Learning react internals by doing silly projects</p>
         </section>
         <section>
           <h2>Introductions</h2>
           <img src="images/introduction.jpg" />
         </section>
         <section>
-            <h1>Some notable projects</h1>
-        </section>
-        <section>
           <img src="images/graphql.JPG" />
         </section>
         <section>
           <img src="images/forex.JPG" />
+        </section>
+        <section>
+          <img src="images/spaceshipgen.png" />
         </section>
         <section>
           <img src="images/game.jpg" />
@@ -334,7 +334,6 @@ function removeChildFromContainer(parent, child) {
       <section>
           <section>
             <h2>Something more dynamic?</h2>
-            <p>Mutating trees</p>
           </section>
           <section>
               <img src="images/roguelike.JPG" />
@@ -413,7 +412,7 @@ function removeChildFromContainer(parent, child) {
           <section>
               <h1>QA?</h1>
               <p>https://github.com/mkmarek/react-reconciler-presentation</p>
-          </section
+          </section>
     </div>
   </div>
 
